# wallpaper_manager

./: .gitignore  README.md  build_on_windows.bat  data.db  pubspec.yaml
asset/image/: player.json
lib/: app_style.dart  main.dart  routers.dart  utils.dart
lib/bridge/: bridge_generated.dart  bridge_generated.freezed.dart
lib/screens/splash/: spash_screen.dart
lib/screens/tree_view/: lazy_tree_view.dart  tree_item_controller.dart
lib/screens/wallpaper/: add_one_image_card.dart  easy_button.dart  gallary_card.dart  image_card.dart  management_screen.dart  sub_process_controller.dart  wallpaper_controller.dart
lib/screens/wallpaper/preview/: gif_preview.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
native/: Cargo.toml
native/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs  bridge_generated.web.rs  lib.rs
native/src/db/: connection.rs  init.rs  mod.rs  model.rs
native/src/storage/: mod.rs
native/src/tests/: mod.rs  test_change_wall_paper.rs  test_get_windows_hwnd.rs  test_get_windows_screen_size.rs  test_multi_monitor.rs  test_multi_monitor_2.rs  test_windows_toast.rs
native/src/utils/: mod.rs
native/src/wallpaper_engine/: mod.rs  wallpaper_engine.rs
others/: test_gif_wallpaper.py
player/: player.py  run.bat  run2.bat  run_gif.bat  test.py  test2.py
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
windows/runner/: Runner.rc  bridge_generated.native.h
