[package]
name = "native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib","staticlib","cdylib",]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flutter_rust_bridge = "= 1.62.1"
wallpaper = { version = "3", features = ["from_url"] }

[build-dependencies]
flutter_rust_bridge_codegen = "= 1.62.1"