[package]
name = "native"
version = "0.1.8"
edition = "2021"

[lib]
crate-type = ["lib","staticlib","cdylib",]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
flutter_rust_bridge = "= 1.62.1"
futures = "0.3"
lazy_static = "1.4.0"
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "sqlite","chrono" ] }
rust-crypto = "0.2.36"
tokio = { version = "1.25.0", features = ["full"] }
wallpaper = { version = "3", features = ["from_url"] }
reqwest = { version = "0.11", features = ["json"] }
rs_filemanager = {path = "D:/github_repo/rs_filemanager"} # for dev

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }
winrt-notification = "0.5.1"
winsafe = {version = "0.0.14", features = ["kernel", "user"] }

[build-dependencies]
flutter_rust_bridge_codegen = "= 1.62.1"
